tests/esproposal_export_star_as.warn/esproposal_export_star_as.warn.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:13

Experimental `export * as` usage. `export * as` is an active early stage feature proposal that may change. You may opt-in
to using it anyway by putting `esproposal.export_star_as=enable` into the `[options]` section of your `.flowconfig`.

   3| export * as foo from "./test";
                  ^^^



Found 1 error
